Added dynamically loading tags from remote API while local storage doesn't have enough tags to satisfy user request.
